Added request to cite original work in README

--- a/README
+++ b/README
@@ -7,6 +7,12 @@ Michael Denkowski and Alon Lavie,
 "METEOR-NEXT and the METEOR Paraphrase Tables: Improved Evaluation Support For Five Target Languages",
 Proceedings of the ACL 2010 Joint Workshop on Statistical Machine Translation and Metrics MATR, 2010
 
+and
+
+Colin Bannard and Chris Callison-Burch,
+"Paraphrasing with Bilingual Parallel Corpora", Proceedings of the 43rd Annual Meeting of the
+Association for Computational Linguistics, 2005
+
 1. About:
 ---------
 
